--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 
 <resources>
 
-    <string name="app_name">YouseongLock</string>
+    <string name="app_name">GlassLock</string>
     <string name="title_settings">Settings</string>
 	<string name="title_gesture_list">Gesture List</string>
 	<string name="title_gesture_create">Gesture Create</string>
@@ -30,13 +30,25 @@
     
     <!--  settings   -->
     <string name="settings_title">Settings</string>
-    <string name="settings_onoff_title">YouseongLock on/off</string>
+    <string name="settings_onoff_title">GlassLock on/off</string>
     <string name="settings_onoff_summary">Check if you want to run YouseongLock.</string>
-    
+
+    <!--  settings.select  -->
+    <string name="settings_selectunlock">Select unlock</string>
     <string name="settings_gesture">Gesture</string>
-    <string name="settings_gesture_manage_title">Management</string>
-    <string name="settings_gesture_manage_summary">Add or delete gesture.</string>
-    <string name="settings_gesture_visibility_title">Visibility</string>
-    <string name="settings_gesture_visibility_summary">You can show and hide the line.</string>
+    <string name="settings_knock">Knock</string>
+    
+	    <!--  settings.select.gesture -->
+        <string name="settings_gesture_manage_title">Management</string>
+        <string name="settings_gesture_manage_summary">Add or delete gesture.</string>
+        <string name="settings_gesture_visibility_title">Visibility</string>
+        <string name="settings_gesture_visibility_summary">You can show and hide the line.</string>
+    
+        <!--  settings.select.knock -->
+        
+    <!--  settings additional -->
+	<string name="settings_addtional">Additional</string>    
+	<string name="settings_auto_unlock">Automatic unlock</string>    
+	<string name="settings_auto_unlock_summary">When the phone rings, it automatically unlocks.</string>    
     
 </resources>
